--- a/html/historico.html
+++ b/html/historico.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 </head>
 
 <body>
@@ -26,13 +28,14 @@
     <nav class="navbar navbar-expand-lg navbar-light nav">
       <div class="container-fluid">
         <div class="container">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
+            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse " id="navbarTogglerDemo01">
             <ul class="navbar-nav mb-2 me-auto mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Início</a> 
+                <a class="nav-link active" aria-current="page" href="index.html">Início</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="sobre.html">Sobre nós</a>
@@ -72,6 +75,20 @@
   </header>
   <main>
     <section>
+      <div class="container text-center">
+        <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+          <div class="toast-header">
+            <strong class="me-auto">Olá, Jales</strong>
+            <i class="bi bi-stars"></i>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+          </div>
+          <div class="toast-body">
+            Você já realizou 3 compras com a gente, esperamos que sua experiência tenha sido ótima!
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
       <div class="container">
         <h6 class="text-center mt-3 text">Olá, Jales!</h6>
         <p class="text-center">Essas foram as compras que você realizou em nossa plataforma nos ultimos meses.</p>
@@ -109,7 +126,7 @@
               </div>
             </div>
           </div>
-        </div>        
+        </div>
         <button type="button" class="btn btn-outline-primary mt-4">Ver mais</button>
       </div>
     </section>
@@ -118,9 +135,9 @@
         <div class="row">
           <div class="col-6 col-lg-3 d-flex justify-content-center">
             <img class="segura" src="../images/Frame 69.png" alt="">
-          </div>   
+          </div>
           <div class="col-6 col-lg-3 d-flex justify-content-center">
-            <img class= "pag" src="../images/Frame 30.png" alt="">
+            <img class="pag" src="../images/Frame 30.png" alt="">
           </div>
           <div class="col-12 col-sm-6 col-lg-3">
             <ul>
@@ -132,9 +149,9 @@
             </ul>
           </div>
           <div class="col-12 col-sm-6 col-lg-3">
-            <p> <i class="bi bi-instagram"></i> shoppingsevilha.com.br</p>  
-            <p><i class="bi bi-envelope-at"></i> @shoppingSevilha</p>   
-            <p> <i class="bi bi-telephone-fill"></i> 0800 9000</p>   
+            <p> <i class="bi bi-instagram"></i> shoppingsevilha.com.br</p>
+            <p><i class="bi bi-envelope-at"></i> @shoppingSevilha</p>
+            <p> <i class="bi bi-telephone-fill"></i> 0800 9000</p>
           </div>
         </div>
       </div>
@@ -147,3 +164,8 @@
 </body>
 
 </html>
+<script>
+  $(document).ready(function () {
+    $('.toast').toast('show');
+  });
+</script>
