--- a/html/oferta.html
+++ b/html/oferta.html
@@ -10,6 +10,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
 </head>
 
 <body>
@@ -26,13 +28,14 @@
     <nav class="navbar navbar-expand-lg navbar-light nav">
       <div class="container-fluid">
         <div class="container">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo01"
+            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse " id="navbarTogglerDemo01">
             <ul class="navbar-nav mb-2 me-auto mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="index.html">Início</a> 
+                <a class="nav-link active" aria-current="page" href="index.html">Início</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link active" href="sobre.html">Sobre nós</a>
@@ -70,13 +73,28 @@
       </div>
     </nav>
     </head>
+    <section>
+      <div class="container text-center">
+        <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+          <div class="toast-header">
+            <strong class="me-auto">SÓ HOJE</strong>
+            <i class="bi bi-cart-check-fill icon-size"></i>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+          </div>
+          <div class="toast-body">
+            Em compras acima de R$70 reais frete grátis para qualquer região do país
+          </div>
+        </div>
+      </div>
+    </section>
     <h2 class="text-center mt-5 mb-5 text">As melhores ofertas você só encontra aqui! <i
         class="bi bi-cart-check-fill"></i></h2>
     <div class="container">
       <div class="row mt-3 d-flex flex-wrap">
         <div class="col-md-3 mb-2">
           <div class="card align-items-center ">
-            <img src="../images/carmen3.jpg" class="card-img-top" alt="..."  style="width: 150px; height: 150px; object-fit:cover;">
+            <img src="../images/carmen3.jpg" class="card-img-top" alt="..."
+              style="width: 150px; height: 150px; object-fit:cover;">
             <div class="card-body">
               <h5 class="card-title text">Bolsa Carmen Steffans</h5>
               <p class="text-center antigo">R$ 829,90 </p>
@@ -87,7 +105,8 @@
         </div>
         <div class="col-md-3 mb-2">
           <div class="card align-items-center">
-            <img src="../images/212rose.jpg" class="card-img-top" alt="..."  style="width: 150px; height: 150px; object-fit:cover;">
+            <img src="../images/212rose.jpg" class="card-img-top" alt="..."
+              style="width: 150px; height: 150px; object-fit:cover;">
             <div class="card-body">
               <h5 class="card-title text">Perfume 212-Vip</h5>
               <p class="text-center antigo">R$ 729,90 </p>
@@ -98,7 +117,8 @@
         </div>
         <div class="col-md-3 mb-2">
           <div class="card align-items-center">
-            <img src="../images/malve4.jpeg" class="card-img-top" alt="..."  style="width: 150px; height: 150px; object-fit:cover;">
+            <img src="../images/malve4.jpeg" class="card-img-top" alt="..."
+              style="width: 150px; height: 150px; object-fit:cover;">
             <div class="card-body">
               <h5 class="card-title text">Vestido infantil de frio</h5>
               <p class="text-center antigo">R$ 129,90 </p>
@@ -109,7 +129,8 @@
         </div>
         <div class="col-md-3 mb-2">
           <div class="card align-items-center">
-            <img src="../images/fone.jpg" class="card-img-top" alt="..."  style="width: 150px; height: 150px; object-fit:cover;">
+            <img src="../images/fone.jpg" class="card-img-top" alt="..."
+              style="width: 150px; height: 150px; object-fit:cover;">
             <div class="card-body">
               <h5 class="card-title text">Fone JBL</h5>
               <p class="text-center antigo">R$ 129,90 </p>
@@ -120,87 +141,96 @@
         </div>
       </div>
 
-        <div class="row mt-3 d-flex flex-wrap">
-          <div class="col-md-3 mb-2">
-            <div class="card align-items-center">
-              <img src="../images/oferta2.jpg" class="card-img-top" alt="..."  style="width: 150px; height: 150px; object-fit:cover;">
-              <div class="card-body">
-                <h5 class="card-title text">Aspirador de pó</h5>
-                <p class="text-center antigo">R$ 229,90 </p>
-                <p class="text-center valor">R$ 149,90</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 mb-2">
-            <div class="card align-items-center">
-              <img src="../images/oferta3.jpg" class="card-img-top" alt="..."  style="width: 150px; height: 150px; object-fit:cover;">
-              <div class="card-body">
-                <h5 class="card-title text">Cafeteria Ostér</h5>
-                <p class="text-center antigo">R$ 449,90 </p>
-                <p class="text-center valor">R$ 279,90</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 mb-2">
-            <div class="card align-items-center">
-              <img src="../images/oferta4.jpg" class="card-img-top" alt="..."  style="width: 150px; height: 150px; object-fit:cover;">
-              <div class="card-body">
-                <h5 class="card-title text">Base Boca Rosa</h5>
-                <p class="text-center antigo">R$ 59,90 </p>
-                <p class="text-center valor">R$ 29,90</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 mb-2">
-            <div class="card align-items-center">
-              <img src="../images/oferta5.jpeg" class="card-img-top" alt="..."  style="width: 150px; height: 150px; object-fit:cover;">
-              <div class="card-body">
-                <h5 class="card-title text">Pneu de carro</h5>
-                <p class="text-center antigo">R$ 289,90 </p>
-                <p class="text-center valor">R$ 199,90</p>
-                <a href="#" class="btn btn-primary">Comprar</a>
-              </div>
+      <div class="row mt-3 d-flex flex-wrap">
+        <div class="col-md-3 mb-2">
+          <div class="card align-items-center">
+            <img src="../images/oferta2.jpg" class="card-img-top" alt="..."
+              style="width: 150px; height: 150px; object-fit:cover;">
+            <div class="card-body">
+              <h5 class="card-title text">Aspirador de pó</h5>
+              <p class="text-center antigo">R$ 229,90 </p>
+              <p class="text-center valor">R$ 149,90</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
             </div>
           </div>
         </div>
-       </div>
-
-
-      </section>
-      <footer class="footer col-12">
-        <div class=" container">
-          <div class="row">
-            <div class="col-6 col-md-3 mb-2 d-flex justify-content-center">
-              <img class="segura" src="../images/Frame 69.png" alt="">
-            </div>   
-            <div class="col-6 col-md-3 mb-2 d-flex justify-content-center">
-              <img class= "pag" src="../images/Frame 30.png" alt="">
-            </div>
-            <div class="col-12 col-sm-6 col-md-3 mb-2">
-              <ul>
-                <p>Deixe-nos ajudar você:</p>
-                <li>Sua Conta</li>
-                <li>Frete e prazo de entrega</li>
-                <li>Devoluções e reembolsos </li>
-                <li>Ajuda</li>
-              </ul>
-            </div>
-            <div class="col-12 col-sm-6 col-md-3 mb-2">
-              <p> <i class="bi bi-instagram"></i> shoppingsevilha.com.br</p>  
-              <p><i class="bi bi-envelope-at"></i> @shoppingSevilha</p>   
-              <p> <i class="bi bi-telephone-fill"></i> 0800 9000</p>   
+        <div class="col-md-3 mb-2">
+          <div class="card align-items-center">
+            <img src="../images/oferta3.jpg" class="card-img-top" alt="..."
+              style="width: 150px; height: 150px; object-fit:cover;">
+            <div class="card-body">
+              <h5 class="card-title text">Cafeteria Ostér</h5>
+              <p class="text-center antigo">R$ 449,90 </p>
+              <p class="text-center valor">R$ 279,90</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
             </div>
           </div>
         </div>
-      </footer>
-      </main>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
+        <div class="col-md-3 mb-2">
+          <div class="card align-items-center">
+            <img src="../images/oferta4.jpg" class="card-img-top" alt="..."
+              style="width: 150px; height: 150px; object-fit:cover;">
+            <div class="card-body">
+              <h5 class="card-title text">Base Boca Rosa</h5>
+              <p class="text-center antigo">R$ 59,90 </p>
+              <p class="text-center valor">R$ 29,90</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 mb-2">
+          <div class="card align-items-center">
+            <img src="../images/oferta5.jpeg" class="card-img-top" alt="..."
+              style="width: 150px; height: 150px; object-fit:cover;">
+            <div class="card-body">
+              <h5 class="card-title text">Pneu de carro</h5>
+              <p class="text-center antigo">R$ 289,90 </p>
+              <p class="text-center valor">R$ 199,90</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    </section>
+    <footer class="footer col-12">
+      <div class=" container">
+        <div class="row">
+          <div class="col-6 col-md-3 mb-2 d-flex justify-content-center">
+            <img class="segura" src="../images/Frame 69.png" alt="">
+          </div>
+          <div class="col-6 col-md-3 mb-2 d-flex justify-content-center">
+            <img class="pag" src="../images/Frame 30.png" alt="">
+          </div>
+          <div class="col-12 col-sm-6 col-md-3 mb-2">
+            <ul>
+              <p>Deixe-nos ajudar você:</p>
+              <li>Sua Conta</li>
+              <li>Frete e prazo de entrega</li>
+              <li>Devoluções e reembolsos </li>
+              <li>Ajuda</li>
+            </ul>
+          </div>
+          <div class="col-12 col-sm-6 col-md-3 mb-2">
+            <p> <i class="bi bi-instagram"></i> shoppingsevilha.com.br</p>
+            <p><i class="bi bi-envelope-at"></i> @shoppingSevilha</p>
+            <p> <i class="bi bi-telephone-fill"></i> 0800 9000</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"></script>
 
 </body>
 
 </html>
+<script>
+  $(document).ready(function () {
+    $('.toast').toast('show');
+  });
+</script>
